--- a/index.html
+++ b/index.html
@@ -556,6 +556,10 @@
               <img src="./static/images/dien-gia-10-pc.png" style="max-width: 100%; width: 100%;cursor: grab;"
                 onclick="show(10)" />
             </div>
+            <div class="col-sm-3 col-xs-6">
+              <img src="./static/images/dien-gia-11-pc.png" style="max-width: 100%; width: 100%;cursor: grab;"
+                onclick="show(11)" />
+            </div>
           </div>
         </div>
       </div>
@@ -731,6 +735,24 @@
                   <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
                     <div>Phó tổng giám đốc </div>
                     <div>Công ty CP Gamuda Land (HCMC)</div>
+                  </div>      
+                </div>
+              </div>
+            </div>
+            <div class="col-6" style="padding-bottom: 10px;">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-11-kx.png" style="max-width: 100%;cursor: grab;"
+                  onclick="show(11)" />
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
+                  <div style="line-height: 13px;" class="dx-dg">
+                    <div>Ông</div>
+                    <div style="font-size: 3vw;font-weight: 700;">
+                      William Đỗ</div>
+                  </div> 
+                  <br>
+                  <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
+                    <div>Chủ tịch/ Giám đốc điều hành</div>
+                    <div>Quỹ Đầu tư Hobbit Investment</div>
                   </div>      
                 </div>
               </div>
