--- a/index-en.html
+++ b/index-en.html
@@ -527,6 +527,9 @@
             <div class="col-sm-3 col-xs-6">
               <img src="./static/images/dien-gia-10-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(10)" />
             </div>
+            <div class="col-sm-3 col-xs-6">
+              <img src="./static/images/dien-gia-11-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(11)" />
+            </div>
           </div>
         </div>
       </div>
@@ -699,6 +702,24 @@
                   <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
                     <div>Deputy General Director</div>
                     <div>Gamuda Land HCMC Joint Stock Company</div>
+                  </div>      
+                </div>
+              </div>
+            </div>
+            <div class="col-6" style="padding-bottom: 10px;">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-11-kx.png" style="max-width: 100%;cursor: grab;"
+                  onclick="show(11)" />
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
+                  <div style="line-height: 13px;" class="dx-dg">
+                    <div>Mr</div>
+                    <div style="font-size: 3vw;font-weight: 700;">
+                      William Do</div>
+                  </div> 
+                  <br>
+                  <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
+                    <div>Chairman/ CEO </div>
+                    <div>Hobbit Investment</div>
                   </div>      
                 </div>
               </div>
