--- a/index-en.html
+++ b/index-en.html
@@ -533,6 +533,7 @@
             <div class="col-sm-3 col-xs-6">
               <img src="./static/images/dien-gia-12-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(12)" />
             </div>
+            <!-- last-dien-gia -->
           </div>
         </div>
       </div>
@@ -698,7 +699,7 @@
                   onclick="show(10)" />
                 <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
-                    <div>Mr</div>
+                    <div>Mr 1</div>
                     <div style="font-size: 3vw;font-weight: 700;">Andrew Chan</div>
                   </div> 
                   <br>
@@ -745,6 +746,7 @@
                 </div>
               </div>
             </div>
+            <!-- last-dien-gia-mb -->
           </div>
         </div>
       </div>
