--- a/index.html
+++ b/index.html
@@ -564,6 +564,7 @@
               <img src="./static/images/dien-gia-12-pc.png" style="max-width: 100%; width: 100%;cursor: grab;"
                 onclick="show(12)" />
             </div>
+            <!-- last-dien-gia -->
           </div>
         </div>
       </div>
@@ -779,6 +780,7 @@
                 </div>
               </div>
             </div>
+            <!-- last-dien-gia-mb -->
           </div>
         </div>
       </div>
